--- a/Project SE/ui/adminprofilescreen.ui
+++ b/Project SE/ui/adminprofilescreen.ui
@@ -1279,6 +1279,35 @@ color: rgba(0, 0, 0, 80);
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>261</x>
+      <y>230</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+   
+	color: rgba(0, 0, 0, 0.6);
+    font-family: &quot;Roboto&quot;;
+    font-size: 10px;
+    font-weight: 400;
+
+}</string>
+    </property>
+    <property name="text">
+     <string>(Coming Soon)</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
+    </property>
+   </widget>
    <zorder>whitebg_2</zorder>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
@@ -1326,6 +1355,7 @@ color: rgba(0, 0, 0, 80);
    <zorder>editbtn_2</zorder>
    <zorder>editimg</zorder>
    <zorder>newpasswordbtn</zorder>
+   <zorder>label_9</zorder>
   </widget>
   <widget class="QPushButton" name="reportbtn">
    <property name="geometry">
