--- a/ProjectApp/ui/reportscreen2.ui
+++ b/ProjectApp/ui/reportscreen2.ui
@@ -395,29 +395,6 @@ background-color: rgba(255, 167, 25, 0.1);
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="reportbtn">
-    <property name="geometry">
-     <rect>
-      <x>15</x>
-      <y>395</y>
-      <width>81</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-    color: #FB9722;;
-    font-family: 'Inter';
-    font-size: 13px;
-    font-weight: 500;
-	border:none;
-}
-</string>
-    </property>
-    <property name="text">
-     <string>Reports</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="homebtn">
     <property name="geometry">
      <rect>
@@ -700,37 +677,6 @@ QTableWidget#tableWidget QHeaderView::section {
      </property>
     </column>
    </widget>
-   <widget class="QPushButton" name="printbtn">
-    <property name="geometry">
-     <rect>
-      <x>960</x>
-      <y>710</y>
-      <width>151</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-	color: #FFFFFF;
-    background-color: #FB9722;
-    border: 1px solid #888888;
-    border-radius: 20px;
-	font-family: 'Inter';
-    font-size: 17px;
-    font-weight: 400;
-}
-QPushButton:hover {
-	background-color: rgb(255, 167, 25);
-}
-
-QPushButton:pressed {
- 	background-color: #FB9722;
-}</string>
-    </property>
-    <property name="text">
-     <string>Export</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="date">
     <property name="geometry">
      <rect>
@@ -909,26 +855,6 @@ border: 2px solid rgba(0, 0, 0, 1);  </string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>15</x>
-      <y>350</y>
-      <width>81</width>
-      <height>76</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QLabel{
-	background-color: rgba(255, 167, 25, 0.1);
-	border: 2px solid #FB9722;
-	border-radius: 8px;
-}</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QLabel" name="title_3">
     <property name="geometry">
      <rect>
@@ -977,6 +903,24 @@ border-radius: 10px;  </string>
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="whitebg_3">
+    <property name="geometry">
+     <rect>
+      <x>161</x>
+      <y>282</y>
+      <width>951</width>
+      <height>391</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(0, 0, 0, 0.4);
+border-radius: 2px;  </string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <zorder>whitebg_3</zorder>
    <zorder>whitebgshadow</zorder>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
@@ -995,7 +939,6 @@ border-radius: 10px;  </string>
    <zorder>DSRbtn</zorder>
    <zorder>listofsale</zorder>
    <zorder>tableWidget</zorder>
-   <zorder>printbtn</zorder>
    <zorder>date</zorder>
    <zorder>titlebar_2</zorder>
    <zorder>titlebar_3</zorder>
@@ -1003,12 +946,56 @@ border-radius: 10px;  </string>
    <zorder>boxlabel_total</zorder>
    <zorder>dateEdit</zorder>
    <zorder>peso</zorder>
-   <zorder>label_2</zorder>
    <zorder>reportIcon</zorder>
-   <zorder>reportbtn</zorder>
    <zorder>title_3</zorder>
    <zorder>title</zorder>
   </widget>
+  <widget class="QPushButton" name="reportbtn">
+   <property name="geometry">
+    <rect>
+     <x>5</x>
+     <y>395</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton{
+    color: #FB9722;;
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 500;
+	border:none;
+}
+</string>
+   </property>
+   <property name="text">
+    <string>S. Management</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>5</x>
+     <y>350</y>
+     <width>101</width>
+     <height>76</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel{
+	background-color: rgba(255, 167, 25, 0.1);
+	border: 2px solid #FB9722;
+	border-radius: 8px;
+}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <zorder>bgwidget</zorder>
+  <zorder>label_2</zorder>
+  <zorder>reportbtn</zorder>
  </widget>
  <resources>
   <include location="../resource.qrc"/>
