--- a/Project SE/ui/newpasswordscreen.ui
+++ b/Project SE/ui/newpasswordscreen.ui
@@ -496,35 +496,6 @@ QPushButton:hover{text-decoration: underline;}</string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="reportbtn">
-    <property name="geometry">
-     <rect>
-      <x>15</x>
-      <y>395</y>
-      <width>81</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-    color: rgba(0,0,0, 0.5);
-    font-family: 'Inter';
-    font-size: 13px;
-    font-weight: 500;
-	border:none;
-}
-
-QPushButton:hover{
-color: #FB9722;
-border: 2px solid #FB9722;
-border-radius: 8px;
-background-color: rgba(255, 167, 25, 0.1);
-}</string>
-    </property>
-    <property name="text">
-     <string>Reports</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="homeIcon">
     <property name="geometry">
      <rect>
@@ -1341,7 +1312,6 @@ color: rgb(255, 0, 0);</string>
    <zorder>usersIcon</zorder>
    <zorder>usersbtn</zorder>
    <zorder>menuIcon</zorder>
-   <zorder>reportbtn</zorder>
    <zorder>homeIcon</zorder>
    <zorder>reportIcon</zorder>
    <zorder>p_mIcon</zorder>
@@ -1373,6 +1343,35 @@ color: rgb(255, 0, 0);</string>
    <zorder>label_9</zorder>
    <zorder>viewpassword</zorder>
    <zorder>editbtn</zorder>
+  </widget>
+  <widget class="QPushButton" name="reportbtn">
+   <property name="geometry">
+    <rect>
+     <x>5</x>
+     <y>395</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton{
+    color: rgba(0,0,0, 0.5);
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 500;
+	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
+   </property>
+   <property name="text">
+    <string>S. Management</string>
+   </property>
   </widget>
  </widget>
  <resources>
