--- a/Project SE/ui/reportscreen2.ui
+++ b/Project SE/ui/reportscreen2.ui
@@ -677,37 +677,6 @@ QTableWidget#tableWidget QHeaderView::section {
      </property>
     </column>
    </widget>
-   <widget class="QPushButton" name="printbtn">
-    <property name="geometry">
-     <rect>
-      <x>960</x>
-      <y>710</y>
-      <width>151</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-	color: #FFFFFF;
-    background-color: #FB9722;
-    border: 1px solid #888888;
-    border-radius: 20px;
-	font-family: 'Inter';
-    font-size: 17px;
-    font-weight: 400;
-}
-QPushButton:hover {
-	background-color: rgb(255, 167, 25);
-}
-
-QPushButton:pressed {
- 	background-color: #FB9722;
-}</string>
-    </property>
-    <property name="text">
-     <string>Export</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="date">
     <property name="geometry">
      <rect>
@@ -934,6 +903,24 @@ border-radius: 10px;  </string>
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="whitebg_3">
+    <property name="geometry">
+     <rect>
+      <x>161</x>
+      <y>282</y>
+      <width>951</width>
+      <height>391</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(0, 0, 0, 0.4);
+border-radius: 2px;  </string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <zorder>whitebg_3</zorder>
    <zorder>whitebgshadow</zorder>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
@@ -952,7 +939,6 @@ border-radius: 10px;  </string>
    <zorder>DSRbtn</zorder>
    <zorder>listofsale</zorder>
    <zorder>tableWidget</zorder>
-   <zorder>printbtn</zorder>
    <zorder>date</zorder>
    <zorder>titlebar_2</zorder>
    <zorder>titlebar_3</zorder>
