--- a/Project SE/ui/userscreen_edit.ui
+++ b/Project SE/ui/userscreen_edit.ui
@@ -1042,6 +1042,35 @@ border-radius: 2px;  </string>
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>261</x>
+      <y>230</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+   
+	color: rgba(0, 0, 0, 0.6);
+    font-family: &quot;Roboto&quot;;
+    font-size: 10px;
+    font-weight: 400;
+
+}</string>
+    </property>
+    <property name="text">
+     <string>(Coming Soon)</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
+    </property>
+   </widget>
    <zorder>whitebg_2</zorder>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
@@ -1076,6 +1105,7 @@ border-radius: 2px;  </string>
    <zorder>label_10</zorder>
    <zorder>whitebg_3</zorder>
    <zorder>tableWidget</zorder>
+   <zorder>label_11</zorder>
   </widget>
   <widget class="QPushButton" name="reportbtn">
    <property name="geometry">
