--- a/ProjectApp/ui/add_new_userscreen.ui
+++ b/ProjectApp/ui/add_new_userscreen.ui
@@ -42,9 +42,10 @@
     </property>
     <property name="styleSheet">
      <string notr="true">font-family:&quot;Inter&quot;;
-font-size:52px;
+font-size:54px;
 font-weight:500;
-color: rgba(0, 0,0, 215);</string>
+color: rgba(0, 0,0, 215);
+color: #FB9722;</string>
     </property>
     <property name="text">
      <string>Create a New User Data:</string>
@@ -83,7 +84,7 @@ color: rgb(255, 0, 0);</string>
      <string notr="true">QPushButton{
 	color: #FFFFFF;
     background-color: #F84A4A;
-   border: 1px solid #000000;
+    border: 1px solid #888888;
     border-radius: 20px;
 	font-family: 'Inter';
     font-size: 22px;
@@ -114,23 +115,24 @@ QPushButton:pressed {
     <property name="styleSheet">
      <string notr="true">QPushButton{
 	color: #FFFFFF;
-    background-color: #009B19;
-    border: 1px solid #000000;
-    border-radius: 20px;
-	font-family: 'Roboto';
-    font-size: 21px;
+    background-color: #22B198;
+    border: 1px solid #888888;
+    border-radius: 15px;
+	font-family: 'Inter';
+    font-size: 20px;
     font-weight: 500;
 }
 QPushButton:hover {
-	background-color: rgb(255, 167, 25);
+	
+	background-color: rgb(39, 206, 176);
 }
 
 QPushButton:pressed {
- 	background-color: #FB9722;
+  background-color: #22B198;
 }</string>
     </property>
     <property name="text">
-     <string>Insert to database</string>
+     <string>Sign-up</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="usernamefield">
@@ -139,7 +141,7 @@ QPushButton:pressed {
       <x>220</x>
       <y>310</y>
       <width>311</width>
-      <height>51</height>
+      <height>45</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -162,7 +164,7 @@ QPushButton:pressed {
       <x>220</x>
       <y>410</y>
       <width>311</width>
-      <height>51</height>
+      <height>45</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -185,14 +187,19 @@ QPushButton:pressed {
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>180</y>
-      <width>91</width>
+      <x>224</x>
+      <y>183</y>
+      <width>121</width>
       <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 12pt &quot;MS Shell Dlg 2&quot;;</string>
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Inter';
+     font-size: 21px;
+    font-weight: 500;
+}</string>
     </property>
     <property name="text">
      <string>Name:</string>
@@ -201,14 +208,19 @@ QPushButton:pressed {
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>280</y>
-      <width>91</width>
+      <x>224</x>
+      <y>283</y>
+      <width>151</width>
       <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 12pt &quot;MS Shell Dlg 2&quot;;</string>
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Inter';
+     font-size: 21px;
+    font-weight: 500;
+}</string>
     </property>
     <property name="text">
      <string>Username:</string>
@@ -217,14 +229,19 @@ QPushButton:pressed {
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>380</y>
-      <width>91</width>
+      <x>224</x>
+      <y>383</y>
+      <width>131</width>
       <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 12pt &quot;MS Shell Dlg 2&quot;;</string>
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Inter';
+     font-size: 21px;
+    font-weight: 500;
+}</string>
     </property>
     <property name="text">
      <string>Password:</string>
@@ -242,7 +259,7 @@ QPushButton:pressed {
     <property name="styleSheet">
      <string notr="true">border-radius: 10px;
 border: 1px solid rgb(234, 112, 0);  
-background-color: rgba(255, 255, 255, 240);
+background-color: rgba(255, 255, 255, 255);
 font-family: 'Roboto';
 font-size: 17px;
 font-weight: 400;
@@ -294,14 +311,19 @@ border:none;</string>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>600</x>
-      <y>180</y>
+      <x>594</x>
+      <y>182</y>
       <width>81</width>
       <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 12pt &quot;MS Shell Dlg 2&quot;;</string>
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Inter';
+     font-size: 21px;
+    font-weight: 500;
+}</string>
     </property>
     <property name="text">
      <string>Role:</string>
@@ -312,8 +334,8 @@ border:none;</string>
      <rect>
       <x>220</x>
       <y>210</y>
-      <width>321</width>
-      <height>46</height>
+      <width>311</width>
+      <height>45</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -358,6 +380,121 @@ background-color: rgb(255, 138, 0);
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>72</x>
+      <y>32</y>
+      <width>711</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font-family:&quot;Inter&quot;;
+font-size:54px;
+font-weight:500;
+color: rgba(0, 0, 0, 0.5);</string>
+    </property>
+    <property name="text">
+     <string>Create a New User Data:</string>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>221</x>
+      <y>312</y>
+      <width>311</width>
+      <height>45</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 100);
+</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>591</x>
+      <y>212</y>
+      <width>161</width>
+      <height>111</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 100);
+</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_10">
+    <property name="geometry">
+     <rect>
+      <x>221</x>
+      <y>212</y>
+      <width>311</width>
+      <height>45</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 100);
+</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>221</x>
+      <y>412</y>
+      <width>311</width>
+      <height>45</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 100);
+</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <zorder>error</zorder>
+   <zorder>backbtn</zorder>
+   <zorder>insertbtn</zorder>
+   <zorder>label_3</zorder>
+   <zorder>label_4</zorder>
+   <zorder>label_5</zorder>
+   <zorder>label_7</zorder>
+   <zorder>navline</zorder>
+   <zorder>label_2</zorder>
+   <zorder>label</zorder>
+   <zorder>label_8</zorder>
+   <zorder>label_9</zorder>
+   <zorder>label_10</zorder>
+   <zorder>label_11</zorder>
+   <zorder>namefield</zorder>
+   <zorder>usernamefield</zorder>
+   <zorder>passwordfield</zorder>
+   <zorder>groupBox</zorder>
   </widget>
  </widget>
  <resources/>
