--- a/ProjectApp/ui/admin_cashierscreen.ui
+++ b/ProjectApp/ui/admin_cashierscreen.ui
@@ -18,8 +18,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1211</width>
-     <height>801</height>
+     <width>1200</width>
+     <height>800</height>
     </rect>
    </property>
    <property name="layoutDirection">
@@ -409,35 +409,6 @@ background-color: rgba(255, 167, 25, 0.1);
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="reportbtn">
-    <property name="geometry">
-     <rect>
-      <x>15</x>
-      <y>395</y>
-      <width>81</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-    color: rgba(0,0,0, 0.5);
-    font-family: 'Inter';
-    font-size: 13px;
-    font-weight: 500;
-	border:none;
-}
-
-QPushButton:hover{
-color: #FB9722;
-border: 2px solid #FB9722;
-border-radius: 8px;
-background-color: rgba(255, 167, 25, 0.1);
-}</string>
-    </property>
-    <property name="text">
-     <string>Reports</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="homebtn">
     <property name="geometry">
      <rect>
@@ -625,6 +596,9 @@ QTableWidget#tableWidget2 QHeaderView::section {
 }       
 </string>
     </property>
+    <property name="editTriggers">
+     <set>QAbstractItemView::NoEditTriggers</set>
+    </property>
     <attribute name="horizontalHeaderStretchLastSection">
      <bool>true</bool>
     </attribute>
@@ -657,7 +631,7 @@ QTableWidget#tableWidget2 QHeaderView::section {
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>70</y>
+      <y>69</y>
       <width>121</width>
       <height>30</height>
      </rect>
@@ -666,7 +640,7 @@ QTableWidget#tableWidget2 QHeaderView::section {
      <string notr="true">QLabel{
     color: #000000;
     font-family: 'Roboto';
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 500;
 }</string>
     </property>
@@ -677,17 +651,17 @@ QTableWidget#tableWidget2 QHeaderView::section {
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLineEdit" name="userfield">
+   <widget class="QLineEdit" name="customerName_field">
     <property name="geometry">
      <rect>
       <x>910</x>
-      <y>92</y>
+      <y>93</y>
       <width>231</width>
-      <height>20</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QLineEdit#userfield {
+     <string notr="true">QLineEdit {
 	padding-left: 10px;
     border-radius: 10px;
     border: 1.5px solid rgb(0, 0, 0);  
@@ -712,7 +686,7 @@ QTableWidget#tableWidget2 QHeaderView::section {
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>112</y>
+      <y>114</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -721,7 +695,7 @@ QTableWidget#tableWidget2 QHeaderView::section {
      <string notr="true">QLabel{
     color: #000000;
     font-family: 'Roboto';
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 500;
 }</string>
     </property>
@@ -748,18 +722,18 @@ QTableWidget#tableWidget2 QHeaderView::section {
     <property name="title">
      <string/>
     </property>
-    <widget class="QRadioButton" name="dinebtn">
+    <widget class="QRadioButton" name="dineinbtn">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>0</y>
+       <x>6</x>
+       <y>3</y>
        <width>61</width>
-       <height>17</height>
+       <height>16</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">font-family:'Roboto';
-font-size:11px;
+font-size:12px;
 font-weight: 500;
 border:none;</string>
      </property>
@@ -767,18 +741,18 @@ border:none;</string>
       <string>Dine-in</string>
      </property>
     </widget>
-    <widget class="QRadioButton" name="takebtn">
+    <widget class="QRadioButton" name="takeoutbtn">
      <property name="geometry">
       <rect>
-       <x>80</x>
-       <y>0</y>
+       <x>78</x>
+       <y>3</y>
        <width>71</width>
        <height>16</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">font-family:'Roboto';
-font-size:11px;
+font-size:12px;
 font-weight: 500;
 border:none;</string>
      </property>
@@ -787,7 +761,7 @@ border:none;</string>
      </property>
     </widget>
    </widget>
-   <widget class="QPushButton" name="addbtn">
+   <widget class="QPushButton" name="proceedbtn">
     <property name="geometry">
      <rect>
       <x>1030</x>
@@ -815,7 +789,7 @@ QPushButton:pressed {
 }</string>
     </property>
     <property name="text">
-     <string>Proceed</string>
+     <string>Generate Sale!</string>
     </property>
    </widget>
    <widget class="QLabel" name="userlistlabel_9">
@@ -846,9 +820,9 @@ QPushButton:pressed {
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>650</y>
+      <y>648</y>
       <width>91</width>
-      <height>30</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -870,9 +844,9 @@ QPushButton:pressed {
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>680</y>
+      <y>675</y>
       <width>81</width>
-      <height>30</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -1177,7 +1151,7 @@ QTableWidget#tableWidget QHeaderView::section {
      <number>100</number>
     </attribute>
     <attribute name="horizontalHeaderDefaultSectionSize">
-     <number>100</number>
+     <number>450</number>
     </attribute>
     <attribute name="horizontalHeaderHighlightSections">
      <bool>false</bool>
@@ -1205,20 +1179,20 @@ QTableWidget#tableWidget QHeaderView::section {
    <widget class="QLineEdit" name="tendered_field">
     <property name="geometry">
      <rect>
-      <x>1050</x>
-      <y>660</y>
-      <width>141</width>
+      <x>1090</x>
+      <y>648</y>
+      <width>101</width>
       <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QLineEdit#userfield {
-	padding-left: 10px;
-    border-radius: 10px;
-    border: 1.5px solid rgb(0, 0, 0);  
+     <string notr="true">QLineEdit{
+	padding-left: 8px;
+    border-radius: 5px;
+    border: 1px solid rgb(0, 0, 0);  
     background-color: rgba(255, 255, 255, 240);
     font-family: 'Roboto';
-	font-size: 13px;
+	font-size: 15px;
 	font-weight: 400;
 }
 </string>
@@ -1233,30 +1207,52 @@ QTableWidget#tableWidget QHeaderView::section {
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="payable_amount">
     <property name="geometry">
      <rect>
-      <x>1110</x>
+      <x>1099</x>
       <y>610</y>
-      <width>81</width>
+      <width>83</width>
       <height>31</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Roboto';
+    font-size: 20px;
+    font-weight: 500;
+}</string>
+    </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0.00</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
+   <widget class="QLabel" name="change">
     <property name="geometry">
      <rect>
-      <x>1110</x>
-      <y>680</y>
-      <width>61</width>
+      <x>1060</x>
+      <y>675</y>
+      <width>121</width>
       <height>21</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Roboto';
+    font-size: 16px;
+    font-weight: 500;
+}</string>
+    </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0.00</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="imgplaceholder">
@@ -1275,6 +1271,35 @@ QTableWidget#tableWidget QHeaderView::section {
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QPushButton" name="reportbtn">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>395</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    color: rgba(0,0,0, 0.5);
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 500;
+	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
+    </property>
+    <property name="text">
+     <string>S. Management</string>
+    </property>
+   </widget>
    <zorder>whitebg</zorder>
    <zorder>whitebg_10</zorder>
    <zorder>sidebar</zorder>
@@ -1287,7 +1312,6 @@ QTableWidget#tableWidget QHeaderView::section {
    <zorder>p_mIcon</zorder>
    <zorder>p_managementbtn</zorder>
    <zorder>homeIcon</zorder>
-   <zorder>reportbtn</zorder>
    <zorder>homebtn</zorder>
    <zorder>reportIcon</zorder>
    <zorder>label_2</zorder>
@@ -1297,10 +1321,10 @@ QTableWidget#tableWidget QHeaderView::section {
    <zorder>title</zorder>
    <zorder>tableWidget2</zorder>
    <zorder>userlistlabel_7</zorder>
-   <zorder>userfield</zorder>
+   <zorder>customerName_field</zorder>
    <zorder>userlistlabel_8</zorder>
    <zorder>groupBox</zorder>
-   <zorder>addbtn</zorder>
+   <zorder>proceedbtn</zorder>
    <zorder>userlistlabel_9</zorder>
    <zorder>userlistlabel_10</zorder>
    <zorder>userlistlabel_11</zorder>
@@ -1312,9 +1336,10 @@ QTableWidget#tableWidget QHeaderView::section {
    <zorder>extrasbtn</zorder>
    <zorder>tableWidget</zorder>
    <zorder>tendered_field</zorder>
-   <zorder>label</zorder>
-   <zorder>label_3</zorder>
+   <zorder>payable_amount</zorder>
+   <zorder>change</zorder>
    <zorder>imgplaceholder</zorder>
+   <zorder>reportbtn</zorder>
   </widget>
  </widget>
  <resources>
