--- a/ProjectApp/ui/adminprofilescreen.ui
+++ b/ProjectApp/ui/adminprofilescreen.ui
@@ -514,6 +514,7 @@ border: 1px solid rgba(0, 0, 0, 1);
 border-radius: 2px;
 background-color: rgb(247, 247, 247);
 padding-left: 5px;
+padding-right: 23px;
 font-family: &quot;Roboto&quot;;
 font-size: 16px;
 font-weight: 400;
@@ -615,35 +616,6 @@ QPushButton:hover{text-decoration: underline;}</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="reportbtn">
-    <property name="geometry">
-     <rect>
-      <x>15</x>
-      <y>395</y>
-      <width>81</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-    color: rgba(0,0,0, 0.5);
-    font-family: 'Inter';
-    font-size: 13px;
-    font-weight: 500;
-	border:none;
-}
-
-QPushButton:hover{
-color: #FB9722;
-border: 2px solid #FB9722;
-border-radius: 8px;
-background-color: rgba(255, 167, 25, 0.1);
-}</string>
-    </property>
-    <property name="text">
-     <string>Reports</string>
     </property>
    </widget>
    <widget class="QLabel" name="homeIcon">
@@ -1233,6 +1205,109 @@ color: rgba(0, 0, 0, 80);
      </size>
     </property>
    </widget>
+   <widget class="QPushButton" name="newpasswordbtn">
+    <property name="geometry">
+     <rect>
+      <x>1038</x>
+      <y>461</y>
+      <width>21</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>35</width>
+      <height>35</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="editbtn_2">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>560</y>
+      <width>21</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>35</width>
+      <height>35</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QLabel" name="editimg">
+    <property name="geometry">
+     <rect>
+      <x>1037</x>
+      <y>460</y>
+      <width>21</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Inter';
+    font-size: 34px;
+    font-weight: bold;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="../resource.qrc">:/icon/icons/editp.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>261</x>
+      <y>230</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+   
+	color: rgba(0, 0, 0, 0.6);
+    font-family: &quot;Roboto&quot;;
+    font-size: 10px;
+    font-weight: 400;
+
+}</string>
+    </property>
+    <property name="text">
+     <string>(Coming Soon)</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
+    </property>
+   </widget>
    <zorder>whitebg_2</zorder>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
@@ -1255,7 +1330,6 @@ color: rgba(0, 0, 0, 80);
    <zorder>usersIcon</zorder>
    <zorder>usersbtn</zorder>
    <zorder>menuIcon</zorder>
-   <zorder>reportbtn</zorder>
    <zorder>homeIcon</zorder>
    <zorder>reportIcon</zorder>
    <zorder>p_mIcon</zorder>
@@ -1278,6 +1352,39 @@ color: rgba(0, 0, 0, 80);
    <zorder>profileimg</zorder>
    <zorder>viewpassword</zorder>
    <zorder>editbtn</zorder>
+   <zorder>editbtn_2</zorder>
+   <zorder>editimg</zorder>
+   <zorder>newpasswordbtn</zorder>
+   <zorder>label_9</zorder>
+  </widget>
+  <widget class="QPushButton" name="reportbtn">
+   <property name="geometry">
+    <rect>
+     <x>5</x>
+     <y>395</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton{
+    color: rgba(0,0,0, 0.5);
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 500;
+	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
+   </property>
+   <property name="text">
+    <string>S. Management</string>
+   </property>
   </widget>
  </widget>
  <resources>
