--- a/ProjectApp/ui/homescreen.ui
+++ b/ProjectApp/ui/homescreen.ui
@@ -14,6 +14,9 @@
    <string>Dialog</string>
   </property>
   <widget class="QWidget" name="bgwidget" native="true">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -383,35 +386,6 @@ background-color: rgba(255, 167, 25, 0.1);
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="reportbtn">
-    <property name="geometry">
-     <rect>
-      <x>15</x>
-      <y>395</y>
-      <width>81</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-    color: rgba(0,0,0, 0.5);
-    font-family: 'Inter';
-    font-size: 13px;
-    font-weight: 500;
-	border:none;
-}
-
-QPushButton:hover{
-color: #FB9722;
-border: 2px solid #FB9722;
-border-radius: 8px;
-background-color: rgba(255, 167, 25, 0.1);
-}</string>
-    </property>
-    <property name="text">
-     <string>Reports</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="homebtn">
     <property name="geometry">
      <rect>
@@ -757,6 +731,9 @@ border-radius: 5px;    </string>
     <property name="sizeAdjustPolicy">
      <enum>QAbstractScrollArea::AdjustToContents</enum>
     </property>
+    <property name="editTriggers">
+     <set>QAbstractItemView::NoEditTriggers</set>
+    </property>
     <property name="tabKeyNavigation">
      <bool>false</bool>
     </property>
@@ -875,6 +852,9 @@ border-radius: 5px;    </string>
     </property>
    </widget>
    <widget class="QTableWidget" name="tableWidget_2">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>250</x>
@@ -883,6 +863,114 @@ border-radius: 5px;    </string>
       <height>192</height>
      </rect>
     </property>
+    <property name="mouseTracking">
+     <bool>true</bool>
+    </property>
+    <property name="acceptDrops">
+     <bool>true</bool>
+    </property>
+    <property name="toolTip">
+     <string/>
+    </property>
+    <property name="statusTip">
+     <string/>
+    </property>
+    <property name="whatsThis">
+     <string/>
+    </property>
+    <property name="accessibleName">
+     <string/>
+    </property>
+    <property name="accessibleDescription">
+     <string/>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QTableWidget#tableWidget_2 QHeaderView::section {
+	font-family: 'Inter';
+	font-size: 14px;
+	font-weight: bold;
+	background-color: #FB9722; 
+	color: black; 
+	padding-left: 5px;
+}       
+</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::WinPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Plain</enum>
+    </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAsNeeded</enum>
+    </property>
+    <property name="sizeAdjustPolicy">
+     <enum>QAbstractScrollArea::AdjustIgnored</enum>
+    </property>
+    <property name="editTriggers">
+     <set>QAbstractItemView::NoEditTriggers</set>
+    </property>
+    <property name="tabKeyNavigation">
+     <bool>false</bool>
+    </property>
+    <property name="showDropIndicator" stdset="0">
+     <bool>false</bool>
+    </property>
+    <property name="dragDropOverwriteMode">
+     <bool>false</bool>
+    </property>
+    <property name="alternatingRowColors">
+     <bool>true</bool>
+    </property>
+    <property name="selectionMode">
+     <enum>QAbstractItemView::NoSelection</enum>
+    </property>
+    <property name="selectionBehavior">
+     <enum>QAbstractItemView::SelectRows</enum>
+    </property>
+    <property name="showGrid">
+     <bool>true</bool>
+    </property>
+    <property name="gridStyle">
+     <enum>Qt::DashDotDotLine</enum>
+    </property>
+    <attribute name="horizontalHeaderDefaultSectionSize">
+     <number>148</number>
+    </attribute>
+    <attribute name="horizontalHeaderStretchLastSection">
+     <bool>true</bool>
+    </attribute>
+    <attribute name="verticalHeaderVisible">
+     <bool>false</bool>
+    </attribute>
+    <attribute name="verticalHeaderHighlightSections">
+     <bool>false</bool>
+    </attribute>
+    <column>
+     <property name="text">
+      <string>Customer</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Amount</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Amount Paid</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Change Amount</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Type of Order</string>
+     </property>
+    </column>
    </widget>
    <widget class="QLabel" name="dashboardimg">
     <property name="geometry">
@@ -1140,6 +1228,90 @@ color: rgba(0, 0, 0, 100);
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QLabel" name="borderbox_4">
+    <property name="geometry">
+     <rect>
+      <x>221</x>
+      <y>192</y>
+      <width>801</width>
+      <height>261</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(0, 0, 0, 0.4);
+border: 1px solid rgba(0, 0, 0, 0.3); 
+border-radius: 5px;   </string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="borderbox_5">
+    <property name="geometry">
+     <rect>
+      <x>221</x>
+      <y>472</y>
+      <width>271</width>
+      <height>241</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(0, 0, 0, 0.4); 
+border-radius: 10px;   </string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="borderbox_6">
+    <property name="geometry">
+     <rect>
+      <x>521</x>
+      <y>472</y>
+      <width>501</width>
+      <height>241</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(0, 0, 0, 0.4); 
+border-radius: 5px;   </string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="reportbtn">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>395</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    color: rgba(0,0,0, 0.5);
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 500;
+	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
+    </property>
+    <property name="text">
+     <string>S. Management</string>
+    </property>
+   </widget>
+   <zorder>borderbox_6</zorder>
+   <zorder>borderbox_5</zorder>
+   <zorder>borderbox_4</zorder>
    <zorder>date_3</zorder>
    <zorder>date</zorder>
    <zorder>line_2</zorder>
@@ -1156,7 +1328,6 @@ color: rgba(0, 0, 0, 100);
    <zorder>menubtn</zorder>
    <zorder>p_mIcon</zorder>
    <zorder>p_managementbtn</zorder>
-   <zorder>reportbtn</zorder>
    <zorder>reportIcon</zorder>
    <zorder>menuIcon</zorder>
    <zorder>borderbox</zorder>
@@ -1180,6 +1351,7 @@ color: rgba(0, 0, 0, 100);
    <zorder>topimg</zorder>
    <zorder>title_3</zorder>
    <zorder>title</zorder>
+   <zorder>reportbtn</zorder>
   </widget>
  </widget>
  <resources>
