--- a/ProjectApp/ui/pmanagementscreen.ui
+++ b/ProjectApp/ui/pmanagementscreen.ui
@@ -387,35 +387,6 @@ background-color: rgba(255, 167, 25, 0.1);
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="reportbtn">
-    <property name="geometry">
-     <rect>
-      <x>15</x>
-      <y>395</y>
-      <width>81</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-    color: rgba(0,0,0, 0.5);
-    font-family: 'Inter';
-    font-size: 13px;
-    font-weight: 500;
-	border:none;
-}
-
-QPushButton:hover{
-color: #FB9722;
-border: 2px solid #FB9722;
-border-radius: 8px;
-background-color: rgba(255, 167, 25, 0.1);
-}</string>
-    </property>
-    <property name="text">
-     <string>Reports</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="homebtn">
     <property name="geometry">
      <rect>
@@ -534,7 +505,7 @@ background-color: rgba(255, 167, 25, 0.1);
      <rect>
       <x>159</x>
       <y>200</y>
-      <width>221</width>
+      <width>241</width>
       <height>51</height>
      </rect>
     </property>
@@ -550,7 +521,7 @@ background-color: rgba(255, 167, 25, 0.1);
      <string>List of Product:</string>
     </property>
     <property name="alignment">
-     <set>Qt::AlignCenter</set>
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
     </property>
    </widget>
    <widget class="QTableWidget" name="tableWidget">
@@ -592,10 +563,16 @@ QTableWidget#tableWidget QHeaderView::section {
      <number>1</number>
     </property>
     <property name="editTriggers">
-     <set>QAbstractItemView::AnyKeyPressed|QAbstractItemView::EditKeyPressed</set>
+     <set>QAbstractItemView::NoEditTriggers</set>
     </property>
     <property name="alternatingRowColors">
      <bool>true</bool>
+    </property>
+    <property name="selectionMode">
+     <enum>QAbstractItemView::ExtendedSelection</enum>
+    </property>
+    <property name="selectionBehavior">
+     <enum>QAbstractItemView::SelectRows</enum>
     </property>
     <property name="showGrid">
      <bool>true</bool>
@@ -682,7 +659,7 @@ QPushButton:pressed {
      <rect>
       <x>159</x>
       <y>90</y>
-      <width>271</width>
+      <width>291</width>
       <height>41</height>
      </rect>
     </property>
@@ -698,7 +675,7 @@ QPushButton:pressed {
      <string>Filter by Category</string>
     </property>
     <property name="alignment">
-     <set>Qt::AlignCenter</set>
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
     </property>
    </widget>
    <widget class="QPushButton" name="addbtn">
@@ -1140,6 +1117,11 @@ color: rgb(255, 0, 0);</string>
     </property>
     <item>
      <property name="text">
+      <string/>
+     </property>
+    </item>
+    <item>
+     <property name="text">
       <string>Available</string>
      </property>
     </item>
@@ -1179,6 +1161,35 @@ color: rgba(0, 0, 0, 80);
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QPushButton" name="reportbtn">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>395</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    color: rgba(0,0,0, 0.5);
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 500;
+	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
+    </property>
+    <property name="text">
+     <string>S. Management</string>
+    </property>
+   </widget>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
    <zorder>whitebg</zorder>
@@ -1188,7 +1199,6 @@ color: rgba(0, 0, 0, 80);
    <zorder>settingIcon</zorder>
    <zorder>menubtn</zorder>
    <zorder>homeIcon</zorder>
-   <zorder>reportbtn</zorder>
    <zorder>homebtn</zorder>
    <zorder>reportIcon</zorder>
    <zorder>menuIcon</zorder>
@@ -1216,6 +1226,7 @@ color: rgba(0, 0, 0, 80);
    <zorder>comboBox</zorder>
    <zorder>title_3</zorder>
    <zorder>title</zorder>
+   <zorder>reportbtn</zorder>
   </widget>
  </widget>
  <resources>
