--- a/ProjectApp/ui/settingscreen.ui
+++ b/ProjectApp/ui/settingscreen.ui
@@ -391,36 +391,6 @@ background-color: rgba(255, 167, 25, 0.1);
      <string>Menu</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="reportbtn">
-    <property name="geometry">
-     <rect>
-      <x>15</x>
-      <y>395</y>
-      <width>81</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-    color: rgba(0,0,0, 0.5);
-    font-family: 'Inter';
-    font-size: 13px;
-    font-weight: 500;
-	border:none;
-}
-
-QPushButton:hover{
-color: #FB9722;
-border: 2px solid #FB9722;
-border-radius: 8px;
-background-color: rgba(255, 167, 25, 0.1);
-}
-</string>
-    </property>
-    <property name="text">
-     <string>Reports</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="menuIcon">
     <property name="geometry">
      <rect>
@@ -775,6 +745,64 @@ color: rgba(0, 0, 0, 80);
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QPushButton" name="reportbtn">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>395</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    color: rgba(0,0,0, 0.5);
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 500;
+	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
+    </property>
+    <property name="text">
+     <string>S. Management</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>261</x>
+      <y>230</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+   
+	color: rgba(0, 0, 0, 0.6);
+    font-family: &quot;Roboto&quot;;
+    font-size: 10px;
+    font-weight: 400;
+
+}</string>
+    </property>
+    <property name="text">
+     <string>(Coming Soon)</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
+    </property>
+   </widget>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
    <zorder>whitebg</zorder>
@@ -787,7 +815,6 @@ color: rgba(0, 0, 0, 80);
    <zorder>p_managementbtn</zorder>
    <zorder>homebtn</zorder>
    <zorder>menubtn</zorder>
-   <zorder>reportbtn</zorder>
    <zorder>menuIcon</zorder>
    <zorder>homeIcon</zorder>
    <zorder>reportIcon</zorder>
@@ -801,6 +828,8 @@ color: rgba(0, 0, 0, 80);
    <zorder>settingsbtn</zorder>
    <zorder>title_3</zorder>
    <zorder>title</zorder>
+   <zorder>reportbtn</zorder>
+   <zorder>label_11</zorder>
   </widget>
  </widget>
  <resources>
