--- a/ProjectApp/ui/userscreen_edit.ui
+++ b/ProjectApp/ui/userscreen_edit.ui
@@ -138,9 +138,9 @@ border-radius: 5px;  </string>
     <property name="geometry">
      <rect>
       <x>380</x>
-      <y>110</y>
+      <y>100</y>
       <width>171</width>
-      <height>61</height>
+      <height>51</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -279,7 +279,7 @@ border-radius: 5px;  </string>
     <property name="geometry">
      <rect>
       <x>440</x>
-      <y>180</y>
+      <y>170</y>
       <width>661</width>
       <height>431</height>
      </rect>
@@ -310,7 +310,7 @@ QTableWidget#tableWidget QHeaderView::section {
      <number>0</number>
     </property>
     <property name="editTriggers">
-     <set>QAbstractItemView::SelectedClicked</set>
+     <set>QAbstractItemView::DoubleClicked</set>
     </property>
     <property name="alternatingRowColors">
      <bool>true</bool>
@@ -483,36 +483,6 @@ background-color: rgba(255, 167, 25, 0.1);
     </property>
     <property name="text">
      <string>Menu</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="reportbtn">
-    <property name="geometry">
-     <rect>
-      <x>15</x>
-      <y>395</y>
-      <width>81</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-    color: rgba(0,0,0, 0.5);
-    font-family: 'Inter';
-    font-size: 13px;
-    font-weight: 500;
-	border:none;
-}
-
-QPushButton:hover{
-color: #FB9722;
-border: 2px solid #FB9722;
-border-radius: 8px;
-background-color: rgba(255, 167, 25, 0.1);
-}
-</string>
-    </property>
-    <property name="text">
-     <string>Reports</string>
     </property>
    </widget>
    <widget class="QLabel" name="menuIcon">
@@ -754,7 +724,7 @@ background-color: rgba(255, 167, 25, 0.1);
     <property name="geometry">
      <rect>
       <x>780</x>
-      <y>640</y>
+      <y>630</y>
       <width>151</width>
       <height>41</height>
      </rect>
@@ -786,7 +756,7 @@ QPushButton:pressed {
     <property name="geometry">
      <rect>
       <x>950</x>
-      <y>640</y>
+      <y>630</y>
       <width>151</width>
       <height>41</height>
      </rect>
@@ -817,8 +787,8 @@ QPushButton:pressed {
     <property name="geometry">
      <rect>
       <x>440</x>
-      <y>690</y>
-      <width>161</width>
+      <y>629</y>
+      <width>151</width>
       <height>41</height>
      </rect>
     </property>
@@ -979,10 +949,10 @@ border-radius: 5px;  </string>
    <widget class="QLabel" name="userlistlabelshadow">
     <property name="geometry">
      <rect>
-      <x>381</x>
-      <y>111</y>
+      <x>382</x>
+      <y>102</y>
       <width>171</width>
-      <height>61</height>
+      <height>51</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -1000,6 +970,107 @@ border-radius: 5px;  </string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>722</y>
+      <width>681</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+ 
+	
+	color: rgba(255, 0, 0, 0.6);
+    font-family: &quot;Inter&quot;;
+    font-size: 15px;
+    font-weight: 350;
+
+}</string>
+    </property>
+    <property name="text">
+     <string>You are currently in edit mode. Navigation to other modules is disabled unless you click 'Back'.</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignJustify|Qt::AlignTop</set>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_10">
+    <property name="geometry">
+     <rect>
+      <x>416</x>
+      <y>720</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+	color: rgba(0, 0, 0, 0.5);
+    font-family: &quot;Roboto&quot;;
+    font-size: 17px;
+    font-weight: 500;
+
+}</string>
+    </property>
+    <property name="text">
+     <string>Note:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="whitebg_3">
+    <property name="geometry">
+     <rect>
+      <x>441</x>
+      <y>172</y>
+      <width>661</width>
+      <height>431</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(0, 0, 0, 0.4);
+border-radius: 2px;  </string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>261</x>
+      <y>230</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+   
+	color: rgba(0, 0, 0, 0.6);
+    font-family: &quot;Roboto&quot;;
+    font-size: 10px;
+    font-weight: 400;
+
+}</string>
+    </property>
+    <property name="text">
+     <string>(Coming Soon)</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
+    </property>
+   </widget>
    <zorder>whitebg_2</zorder>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
@@ -1009,12 +1080,10 @@ border-radius: 5px;  </string>
    <zorder>appearanceIcon</zorder>
    <zorder>usersIcon</zorder>
    <zorder>p_mIcon</zorder>
-   <zorder>tableWidget</zorder>
    <zorder>logoutbtn</zorder>
    <zorder>p_managementbtn</zorder>
    <zorder>homebtn</zorder>
    <zorder>menubtn</zorder>
-   <zorder>reportbtn</zorder>
    <zorder>menuIcon</zorder>
    <zorder>homeIcon</zorder>
    <zorder>reportIcon</zorder>
@@ -1032,6 +1101,40 @@ border-radius: 5px;  </string>
    <zorder>title</zorder>
    <zorder>userlistlabelshadow</zorder>
    <zorder>userlistlabel</zorder>
+   <zorder>label_9</zorder>
+   <zorder>label_10</zorder>
+   <zorder>whitebg_3</zorder>
+   <zorder>tableWidget</zorder>
+   <zorder>label_11</zorder>
+  </widget>
+  <widget class="QPushButton" name="reportbtn">
+   <property name="geometry">
+    <rect>
+     <x>5</x>
+     <y>395</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton{
+    color: rgba(0,0,0, 0.5);
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 500;
+	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
+   </property>
+   <property name="text">
+    <string>S. Management</string>
+   </property>
   </widget>
  </widget>
  <resources>
